[gd_scene load_steps=11 format=3 uid="uid://bty05s2e3am5q"]

[ext_resource type="Script" path="res://scripts/Battle.gd" id="1_p0goo"]
[ext_resource type="Script" path="res://scripts/FPS.gd" id="4_ufn6s"]
[ext_resource type="Script" path="res://scripts/LifeBar.gd" id="5_taydl"]
[ext_resource type="Script" path="res://scripts/TimeoutTimer.gd" id="6_7ngma"]
[ext_resource type="Script" path="res://scripts/BulletRemover.gd" id="6_ctue6"]
[ext_resource type="Script" path="res://scripts/GrazeCounter.gd" id="7_5eiw7"]

[sub_resource type="LabelSettings" id="LabelSettings_pgn28"]
font_size = 32

[sub_resource type="LabelSettings" id="LabelSettings_3ekv2"]
font_size = 32

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rlwpo"]
size = Vector2(2000, 50)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jq4nx"]
size = Vector2(50, 2000)

[node name="Battle" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_p0goo")

[node name="BattleUI" type="Control" parent="."]
z_index = 20
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="FPSCounter" type="Label" parent="BattleUI"]
process_mode = 3
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -52.5
offset_top = -26.0
offset_right = 52.5
grow_horizontal = 2
grow_vertical = 0
text = "placeholder"
horizontal_alignment = 1
script = ExtResource("4_ufn6s")

[node name="LifeBarContainer" type="HBoxContainer" parent="BattleUI"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.000868056
anchor_top = 0.00154321
anchor_right = 1.00087
anchor_bottom = 0.00154321
offset_bottom = 8.0
grow_horizontal = 2
script = ExtResource("5_taydl")
metadata/_edit_use_anchors_ = true

[node name="Time" type="Label" parent="BattleUI"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -60.0
offset_bottom = 48.0
grow_horizontal = 0
text = "test"
label_settings = SubResource("LabelSettings_pgn28")
horizontal_alignment = 2
script = ExtResource("6_7ngma")

[node name="Timer" type="Timer" parent="BattleUI/Time"]
one_shot = true

[node name="BarCount" type="Label" parent="BattleUI"]
layout_mode = 1
offset_right = 60.0
offset_bottom = 48.0
text = "test"
label_settings = SubResource("LabelSettings_3ekv2")

[node name="SpellName" type="Label" parent="BattleUI"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -28.0
offset_top = 3.0
offset_right = 28.0
offset_bottom = 29.0
grow_horizontal = 2
text = "test"
horizontal_alignment = 1

[node name="Graze" type="Label" parent="BattleUI"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -23.0
offset_right = 40.0
grow_vertical = 0
text = "test"
script = ExtResource("7_5eiw7")

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0

[node name="Spawners" type="Node2D" parent="."]

[node name="BulletRemover" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2
monitorable = false
script = ExtResource("6_ctue6")

[node name="Up" type="CollisionShape2D" parent="BulletRemover"]
position = Vector2(576, -200)
shape = SubResource("RectangleShape2D_rlwpo")

[node name="Left" type="CollisionShape2D" parent="BulletRemover"]
position = Vector2(-200, 324)
shape = SubResource("RectangleShape2D_jq4nx")

[node name="Down" type="CollisionShape2D" parent="BulletRemover"]
position = Vector2(576, 848)
shape = SubResource("RectangleShape2D_rlwpo")

[node name="Right" type="CollisionShape2D" parent="BulletRemover"]
position = Vector2(1352, 324)
shape = SubResource("RectangleShape2D_jq4nx")

[connection signal="area_entered" from="BulletRemover" to="BulletRemover" method="_on_area_entered"]
